--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">48 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 2 - Review and First Real Time Pizza Cook</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Will Reform win the next UK election?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Ceasing to Let Your Mind Limit Your Happiness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Week 3 UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -530,7 +530,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development - 17.09.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">48 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Will Reform win the next UK election?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>Week 3 UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5217,7 +5217,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development - 17.09.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Ceasing to Let Your Mind Limit Your Happiness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 2 - Review and First Real Time Pizza Cook</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
