--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Trading My Strategies Live 24/7 XAUUSD, USDJPY, GBPUSD,... (100% Verified Profits)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Mahalaya Amavasya is an opportunity to make our ancestry into an asset instead of a trap | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -431,7 +431,7 @@
                     <div class="video-info">
                         <h3>Is Hard Work Enough to be the Best Bowler? | Kailash Yatra | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -519,7 +519,7 @@
                     <div class="video-info">
                         <h3>The Mark Douglas Story — Why Mindset Matters</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -706,7 +706,7 @@
                     <div class="video-info">
                         <h3>Trading Discipline Includes Knowing When to Stop</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1333,7 +1333,7 @@
                     <div class="video-info">
                         <h3>Every Lesson in Trading Got Me Here</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>Trading My Strategies Live 24/7 XAUUSD, USDJPY, GBPUSD,... (100% Verified Profits)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5206,7 +5206,7 @@
                         <div class="video-info">
                             <h3>The Mark Douglas Story — Why Mindset Matters</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5283,7 +5283,7 @@
                         <div class="video-info">
                             <h3>Trading Discipline Includes Knowing When to Stop</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5525,7 +5525,7 @@
                         <div class="video-info">
                             <h3>Every Lesson in Trading Got Me Here</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Mahalaya Amavasya is an opportunity to make our ancestry into an asset instead of a trap | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7418,7 +7418,7 @@
                         <div class="video-info">
                             <h3>Is Hard Work Enough to be the Best Bowler? | Kailash Yatra | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
