--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring the Layers of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Getting Stressed During Trades</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 2 - Review and First Real Time Pizza Cook</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Trading My Strategies Live 24/7 XAUUSD, USDJPY, GBPUSD,... (100% Verified Profits)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Will Reform win the next UK election?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Need a Break? The Markets Will Wait</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Getting Stressed During Trades</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Trading My Strategies Live 24/7 XAUUSD, USDJPY, GBPUSD,... (100% Verified Profits)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>Will Reform win the next UK election?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5162,7 +5162,7 @@
                         <div class="video-info">
                             <h3>Need a Break? The Markets Will Wait</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring the Layers of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 2 - Review and First Real Time Pizza Cook</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
