--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Significance of Navratri | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">41 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">44 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Trading My Strategies Live 24/7 XAUUSD, USDJPY, GBPUSD,... (100% Verified Profits)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Mahalaya Amavasya is an opportunity to make our ancestry into an asset instead of a trap | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>A 4200-Year-Old Temple in Greece, Built by Yogis | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -471,9 +471,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=78tYcPQon2o" target="_blank">
-                    <img src="https://i.ytimg.com/vi/78tYcPQon2o/mqdefault.jpg" alt="Is Hard Work Enough to be the Best Bowler? | Kailash Yatra | Sadhguru">
+                    <img src="https://i.ytimg.com/vi/78tYcPQon2o/mqdefault.jpg" alt="Varun Chakaravarthy: How Can I Reach The Ultimate Level Of Skill?">
                     <div class="video-info">
-                        <h3>Is Hard Work Enough to be the Best Bowler? | Kailash Yatra | Sadhguru</h3>
+                        <h3>Varun Chakaravarthy: How Can I Reach The Ultimate Level Of Skill?</h3>
                         <div class="channel">Sadhguru</div>
                         <div class="date">3 days ago</div>
                     </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">44 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>Trading My Strategies Live 24/7 XAUUSD, USDJPY, GBPUSD,... (100% Verified Profits)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>The Significance of Navratri | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">41 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Mahalaya Amavasya is an opportunity to make our ancestry into an asset instead of a trap | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7330,7 +7330,7 @@
                         <div class="video-info">
                             <h3>A 4200-Year-Old Temple in Greece, Built by Yogis | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7436,9 +7436,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=78tYcPQon2o" target="_blank">
-                        <img src="https://i.ytimg.com/vi/78tYcPQon2o/mqdefault.jpg" alt="Is Hard Work Enough to be the Best Bowler? | Kailash Yatra | Sadhguru">
+                        <img src="https://i.ytimg.com/vi/78tYcPQon2o/mqdefault.jpg" alt="Varun Chakaravarthy: How Can I Reach The Ultimate Level Of Skill?">
                         <div class="video-info">
-                            <h3>Is Hard Work Enough to be the Best Bowler? | Kailash Yatra | Sadhguru</h3>
+                            <h3>Varun Chakaravarthy: How Can I Reach The Ultimate Level Of Skill?</h3>
                             <div class="channel">Sadhguru</div>
                             <div class="date">3 days ago</div>
                         </div>
