--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -805,7 +805,7 @@
                     <div class="video-info">
                         <h3>Burrata & Anchovy Pizza Napoletana ❤️🔥🍕#shorts #pizza</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8783,7 +8783,7 @@
                         <div class="video-info">
                             <h3>Burrata & Anchovy Pizza Napoletana ❤️🔥🍕#shorts #pizza</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
