--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Navratri And The Secret of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -794,7 +794,7 @@
                     <div class="video-info">
                         <h3>ONE INCH Takeaway Change Adds 50 Yards to ANY Golf Swing</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2131,7 +2131,7 @@
                     <div class="video-info">
                         <h3>Vikkstar + Hardstyle 🔥</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Navratri And The Secret of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9405,7 +9405,7 @@
                         <div class="video-info">
                             <h3>ONE INCH Takeaway Change Adds 50 Yards to ANY Golf Swing</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9697,7 +9697,7 @@
                         <div class="video-info">
                             <h3>Vikkstar + Hardstyle 🔥</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
