--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AVOID THE BOMB</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">47 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>How To Trade Like A Casino</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Backtesting Length: What Is Sufficient For Your Strategy? #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2600,9 +2600,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=nMC2CbccYt0" target="_blank">
-                    <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)">
+                    <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="Do this 3 minutes a day to become a scratch golfer?!">
                     <div class="video-info">
-                        <h3>This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)</h3>
+                        <h3>Do this 3 minutes a day to become a scratch golfer?!</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">Aug 11, 2025</div>
                     </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>How To Trade Like A Casino</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>Backtesting Length: What Is Sufficient For Your Strategy? #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9533,9 +9533,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=nMC2CbccYt0" target="_blank">
-                        <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)">
+                        <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="Do this 3 minutes a day to become a scratch golfer?!">
                         <div class="video-info">
-                            <h3>This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)</h3>
+                            <h3>Do this 3 minutes a day to become a scratch golfer?!</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">Aug 11, 2025</div>
                         </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AVOID THE BOMB</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">47 minutes ago</div>
                         </div>
                     </a>
                 </div>
