--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Why the Stock Market Is Like a Lottery?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring the Power of Will</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -376,7 +376,7 @@
                     <div class="video-info">
                         <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Why the Stock Market Is Like a Lottery?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5184,7 +5184,7 @@
                         <div class="video-info">
                             <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring the Power of Will</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
